<resources>
    <string name="app_name">Brain Train</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error_password">Password must contain at least 8 characters.</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="button_next">Next</string>
    <string name="button_cancel">Cancel</string>
    <string name="search_title">Search</string>
    <string name="filter_title">Filter</string>
    <string name="logintitle">BrainTrain</string>
    <string name="button_signin">SIGN IN</string>
    <string name="product_title">Medication Name</string>
    <string name="product_description">Medication Description</string>
    <string name="button_signup">SIGN UP</string>
    <string name="medication">Medication</string>
    <string name="UserInfo">User Information</string>
    <string name="game">Game</string>
    <string name="Licence">Licence</string>
    <string name="privarypolicy">Privary Policy</string>
    <string name="logout">Logout</string>
    <string name="about">About</string>
    <string name="hint_Fathers_First_Name">Father\'s First Name</string>
    <string name="button_continue">Continue</string>
    <string name="hint_Dateofbirth">Date of birth</string>
    <string name="signup">sign up</string>
    <string name="hint_Mothers_Maiden_Name">Mother\'s Maiden Name</string>
    <string name="hint_diagnosis">Diagnosis</string>
    <string name="button_save">Save</string>
    <string name="hint_yyyy">yyyy</string>
    <string name="usersuccess">User Successfully Created</string>
    <string name="yourusername">Your username is</string>
    <string name="button_gotosignin">go to sign in</string>
    <string name="welcome_text">Welcome, </string>
    <string name="button_Add">Add</string>
    <string name="hint_Medication_Name">Medication Name</string>
    <string name="asneeded">As needed</string>
    <string name="duration">Duration</string>
    <string name="frequency">Frequency</string>
    <string name="StartDate">Start Date</string>
    <string name="Noenddate">No end date</string>
    <string name="Untildate">Until date</string>
    <string name="ForXdays">For X days</string>
    <string name="until">Until</string>
    <string name="dailyXtimesaday">Daily, X times a day</string>
    <string name="dailyeveryXhours">Daily, every X hours</string>
    <string name="everyXdays">Every X days</string>
    <string name="specificdaysofweek">Specific days of week</string>
    <string name="Cycle">Cycle: X days active, Y days inactive</string>
    <string name="every">Every</string>
    <string name="daysactive">Days active</string>
    <string name="daysinactive">Days inactive</string>
    <string name="totalcycle">Total cycle day</string>
    <string name="unit">Unit</string>
    <string name="home">Home</string>
    <string name="addMedication">Add Medication</string>
    <string name="medicationDetail">Medication Detail</string>
    <string name="error_fathersfirstname">Should be more than 3 character!</string>
    <string name="error_invalidDOB">Invalid date of birth!</string>
    <string name="rememberme">Remember me</string>
    <string name="error_username">Username incorrect!!</string>
    <string name="error_medicationname">Enter medicaiton name.</string>
    <string name="TermsCondition">Terms and Conditions</string>
    <string name="error_name">Should be more than 4 characters!</string>
    <string name="privacypolicy">Privacy Policy</string>

</resources>