<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MedicationNameFragment"
    android:orientation="vertical">
     <com.google.android.material.appbar.AppBarLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content">

     <androidx.appcompat.widget.Toolbar
         android:id="@+id/app_bar"
         style="@style/Widget.Shrine.Toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:paddingStart="0dp"
         android:paddingLeft="0dp"
         android:paddingEnd="12dp"
         android:paddingRight="0dp"
         app:contentInsetStart="0dp"
         app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
         app:title="@string/addMedication" />
 </com.google.android.material.appbar.AppBarLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/MedicationName_text_input"
        style="@style/Widget.Shrine.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_Medication_Name"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="30dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/MedicationNameTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/continue_button"
        style="@style/Widget.Shrine.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/button_continue" />

</LinearLayout>