<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/loginPageBackgroundColor"
tools:context=".SignUpDOBFragment">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:orientation="vertical"
    android:padding="24dp"
    android:paddingTop="16dp">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="STEP 3 OF 4"
        android:gravity="center"
        android:textSize="18dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp"
        android:layout_gravity="center_vertical|center_horizontal"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/dobLabel"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="28dp"
            android:layout_marginTop="12dp"
            android:background="@null"
            android:enabled="false"
            android:textColor="@android:color/black"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/hint_Dateofbirth" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dob_text_input"
            style="@style/Widget.Shrine.TextInputLayout"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:hint="@string/hint_yyyy"
            android:layout_alignParentRight="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/dob_edit_text"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLines="1"
                android:layout_alignParentRight="true"/>

        </com.google.android.material.textfield.TextInputLayout>



    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <com.google.android.material.button.MaterialButton
            android:id="@+id/continue_button"
            style="@style/Widget.Shrine.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:text="@string/button_continue" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancel_button"
            style="@style/Widget.Shrine.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_cancel" />

    </LinearLayout>


</LinearLayout>
</ScrollView>
