<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".CycleFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/active"
        android:layout_marginBottom="10dp"
        >
        <TextView
            android:id="@+id/daysactive"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/daysactive"
            style="@style/TextAppearance.Shrine.TextLabel"
            />
        <TextView
            android:id="@+id/daysactiveTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="2 day(s)"
            style="@style/TextAppearance.Shrine.TextInputLayout.HintText"
            android:clickable="true"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/inactive"
        android:layout_marginBottom="10dp">
        <TextView
            android:id="@+id/daysinactive"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/daysinactive"
            style="@style/TextAppearance.Shrine.TextLabel"
            />
        <TextView
            android:id="@+id/daysinactiveTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="1"
            android:clickable="true"
            style="@style/TextAppearance.Shrine.TextInputLayout.HintText"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/cycle"
        android:layout_marginBottom="10dp">
        <TextView
            android:id="@+id/totalcycle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/totalcycle"
            style="@style/TextAppearance.Shrine.TextLabel"
            />
        <TextView
            android:id="@+id/totalcycleTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="1"
            style="@style/TextAppearance.Shrine.TextInputLayout.HintText"
            />
    </LinearLayout>

</LinearLayout>
