<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MedicationDetailFragment"
    android:orientation="vertical">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/app_bar"
            style="@style/Widget.Shrine.Toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:paddingStart="0dp"
            android:paddingLeft="0dp"
            android:paddingEnd="12dp"
            android:paddingRight="0dp"
            app:contentInsetStart="0dp"
            app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
            app:title="@string/medicationDetail" />
    </com.google.android.material.appbar.AppBarLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/name"
            android:layout_marginBottom="10dp">
            <TextView
                android:id="@+id/medName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/medication"
                style="@style/TextAppearance.Shrine.Body"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/unit"
            android:layout_marginBottom="1dp">
            <TextView
                android:id="@+id/UnitLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/unit"
                style="@style/TextAppearance.Shrine.Body"
                />
            <TextView
                android:id="@+id/UnitTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Unit"
                style="@style/TextAppearance.Shrine.TextInputLayout.HintText"
                />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>