<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/loginPageBackgroundColor"
    tools:context=".LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:padding="24dp"
        android:paddingTop="16dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="68dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp">

            <ImageView
                android:id="@+id/brain"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_gravity="start"
                app:srcCompat="@drawable/brain"
                tools:ignore="VectorDrawableCompat" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/brain"
                android:text="@string/logintitle"
                android:textAppearance="@style/TextAppearance.Shrine.Title" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:text="Sharpen your brain, everyday!"
                android:gravity="center"
                android:textSize="18dp"
                />


        </RelativeLayout>

        <ImageView
            android:layout_width="346dp"
            android:layout_height="266dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="#FFFFFF"
            app:srcCompat="@drawable/login_logo" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username_text_input"
            style="@style/Widget.Shrine.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_username"
            android:layout_marginBottom="1dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.checkbox.MaterialCheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rememberme"
            android:text="@string/rememberme"
            android:layout_marginBottom="5dp"
            style="@style/TextAppearance.Shrine.BodySmall"
            />


      <!--  <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_text_input"
            style="@style/Widget.Shrine.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <com.google.android.material.button.MaterialButton
                android:id="@+id/signIn_button"
                style="@style/Widget.Shrine.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:text="@string/button_signin" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/signUp_button"
                style="@style/Widget.Shrine.Button.TextButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_signup" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/download_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:backgroundTint="@android:color/transparent"
                app:icon="@drawable/icons8_google_drive_32"
                app:iconTintMode="multiply"
                android:onClick="downloadDB"
                android:layout_gravity="center_vertical|center_horizontal"
                tools:ignore="OnClick"
                android:text="Restore from drive?"/>

        </LinearLayout>


    </LinearLayout>
</ScrollView>
